--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,5 @@
 include README.txt
 include LICENSE
 include setup.py
-include sskjpy\__init__.py
-include sskjpy\sskj.py
+include sskjpy\*.py
 include *.txt
